--- a/Jam/Assembly-CSharp.csproj
+++ b/Jam/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ClickableObject.cs" />
+    <Compile Include="Assets\Manager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
