--- a/Jam/Assembly-CSharp.csproj
+++ b/Jam/Assembly-CSharp.csproj
@@ -65,13 +65,17 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.28f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\buttonNextScript.cs" />
     <Compile Include="Assets\Scripts\ScriptIntro.cs" />
     <Compile Include="Assets\Scripts\DialogManager.cs" />
+    <Compile Include="Assets\Plus.cs" />
     <Compile Include="Assets\Scripts\Manager.cs" />
+    <Compile Include="Assets\Scripts\ClickableObjectMinus.cs" />
+    <Compile Include="Assets\Scripts\NextScript.cs" />
     <Compile Include="Assets\formScript.cs" />
     <Compile Include="Assets\Scripts\FileReader.cs" />
-    <Compile Include="Assets\Scripts\ClickableObject.cs" />
+    <Compile Include="Assets\Scripts\ClickableObjectPlus.cs" />
+    <Compile Include="Assets\Signal.cs" />
+    <Compile Include="Assets\ima.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
